style: added black color for input text .hide-scrollbar class for invisible srollbars

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.App {
-  text-align: center;
-}
+*/
 input{
   outline: none;
+  color: black;
 }
 
 @keyframes spin {
@@ -14,6 +12,11 @@ input{
     transform: rotate(360deg);
   }
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; 
+}
+
 
 
 .loader {
