--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,28 @@
 body {
-  /* margin: 0;
+  margin: 0;
+  height: 100dvh;
+  overflow: hidden;
+  border: 5px solid orangered;
+
+  /*
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
+}
+*{
+  box-sizing: border-box;
+}
+
+#root {
+  border: 5px solid aqua;
+  overflow: hidden;
+  
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+   &::-webkit-scrollbar{
+    display:none;
+   }
 }
