--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,11 +17,27 @@ input{
   display: none; 
 }
 
-
-
 .loader {
   border: 4px solid;
   border-radius: 50%;
   border-color: #fff transparent transparent transparent;
   animation: spin 1s linear infinite;
+}
+
+.icon-container {
+  visibility: hidden;
+  position: absolute;
+  opacity: 0;
+  transition: opacity 0.3s ease; /* Added transition */
+
+}
+
+.hover-item:hover .icon-container {
+  visibility: visible;
+  opacity: 1;
+  display: flex;
+}
+
+.icon-container-hidden{
+  display: none; 
 }
